# llm-council

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  llm_council.yaml  mkdocs.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: release-security.yml  security.yml
docs/: index.md
docs/adr/: ADR-012-mcp-server-reliability.md  ADR-013-secure-api-key-handling.md  ADR-015-bias-auditing.md  ADR-016-structured-rubric-scoring.md  ADR-022-tiered-model-selection.md  (+11 more)
llm_council_mcp/: council.py  mcp_server.py  openrouter.py
tests/: test_bias_audit.py  test_bias_persistence.py  test_config.py  test_council_integration.py  test_council_reliability.py  test_deployment.py  test_dissent.py  test_docs_build.py  test_env_example.py  test_fast_path.py  test_gateway_base.py  test_gateway_council_integration.py  test_gateway_fallback.py  test_gateway_openrouter.py  test_layer_integration.py  test_mcp_server.py  test_mcp_tier_integration.py  test_metadata_cache.py  test_metadata_integration.py  test_observability_wiring.py  test_offline_mode.py  test_openrouter.py  test_openrouter_client.py  test_rubric.py  test_secure_key_handling.py  test_security_configs.py  test_security_workflows.py  test_selection_metadata.py  test_telemetry_alignment.py  test_telemetry_config.py  test_tier_contract.py  test_tier_council_integration.py  test_tier_model_pools.py  test_tier_selection.py  test_triage_council_integration.py  test_triage_wildcard.py  test_unified_config.py  test_verdict.py  test_webhook_integration.py
(+45 files in other folders)
